# kwanmath

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
kwanmath/: bezier.py  geodesy.py  interp.py  matrix.py  ode.py  optimize.py  vector.py
kwanmath/bezier/: __init__.py  bezier.py
kwanmath/interp/: __init__.py  interp.py
kwanmath/matrix/: __init__.py  matrix.py
kwanmath/vector/: vector.py
src/kwanmath/: conic.py  gaussian.py  geodesy.py  matrix.py  vector.py
tests/: test_conic.py  test_geodesy.py  test_matrix.py  test_ode.py  test_vector.py
vector/: __init__.py  vector.py
