[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kwanmath"
version = "0.1.0"
authors = [
  { name="kwan3217", email="kwan3217@gmail.com" },
]
description = "Mathematics the Kwan Systems way"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies=[
    "scipy",
]

[project.urls]
Homepage = "https://github.com/kwan3217/kwanmath/"
Issues = "https://github.com/kwan3217/kwanmath/issues"
